--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     </tr>
                     <tr>
                         <td style="color: #333; padding-top: 0;">
-                            <p style="font-size: 14px; margin-top: 0;"><span style="color: #648d31;">🔒</span> We want you to recognise a fraudulent email if you receive one, so Lloyds Bank will always greet you personally using your title, surname, and the last four digits of your account number: XXXX1234.</p>
+                            <p style="font-size: 14px; margin-top: 0;"><span style="color: #00864F;">&#128274;&#xfe0e;</span> We want you to recognise a fraudulent email if you receive one, so Lloyds Bank will always greet you personally using your title, surname, and the last four digits of your account number: XXXX1234.</p>
                            <table width="100%" cellspacing="0" cellpadding="0">
                             <tr>
                               <td style="border-top: 1px dotted #cccccc; padding: 5px 0;"></td>
