--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <tr>
                         <td style="padding-top: 5px;">
                             <h2 style="color: #78BE20; margin-top: 0;">Need help?</h2>
-                            <p>We want Online for Business to be as accessible as possible. If you can't use a card reader for any reason, or require any other help, please call us on <strong style="color: #78BE20; text-decoration-line: underline;">0345 300 0116</strong> (<span style="color: #78BE20;text-decoration: underline;">+44 207 649 9437</span> from outside the UK). Lines are open Monday to Friday 7am to 8pm, and 9am to 2pm on Saturday, except on bank holidays.</p>
+                            <p>We want Online for Business to be as accessible as possible. If you can't use a card reader for any reason, or require any other help, please call us on <a href="tel:03453000116"><strong style="color: #78BE20; text-decoration-line: underline;">0345 300 0116</strong></a> (<a href="tel:+442076499437"><span style="color: #78BE20;text-decoration: underline;">+44 207 649 9437</span></a> from outside the UK). Lines are open Monday to Friday 7am to 8pm, and 9am to 2pm on Saturday, except on bank holidays.</p>
                             <p>If you have a hearing or speech impairment, you can use Relay UK. You can find more information about the Relay UK Service at <a href="https://www.relayuk.bt.com" style="color: #78BE20; target="_blank">www.relayuk.bt.com</a>.</p>
                             <table width="100%" cellspacing="0" cellpadding="0">
                                 <tr>
