--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </noscript>
     <![endif]-->
 </head>
-<body style="-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; margin: 0; padding: 0; background-color: #ffffff; font-family: Arial, sans-serif;">
+<body style="-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; margin: 0; padding: 0; background-color: #f5f5f5; font-family: Arial, sans-serif;">
     <div style="display: none; max-height: 0; overflow: hidden;">
         Welcome to Lloyds Bank Online for Business - Access your account details inside
     </div>
