--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <![endif]-->
 </head>
 <body style="-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; margin: 0; padding: 0; background-color: #ffffff; font-family: Arial, sans-serif;">
-    <div style="display: none; max-height: 0; overflow: hidden;">
+    <div style="display: none; max-height: 0; overflow: hidden; aria-hidden="true">
         Welcome to Lloyds Bank Online for Business - Access your account details inside
     </div>
     <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0" bgcolor="#ffffff">
