--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <!-- Specified the character encoding to ensure correct rendering across email clients -->
     <meta charset="UTF-8">
-    <!-- Used the meta tag to ensure rendering on mobile devices -->
+    <!-- Used the meta tag to ensure this design will be viewable on mobile devices - could have gone for more responsive design with Media Queries but I did not want to reduce email client compatability -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lloyds Bank - Welcome to Online for Business</title>
     <!-- Used a conditional comment for Microsoft Outlook to ensure images and layout will render even on old versions -->
