--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <![endif]-->
 </head>
 <body style="-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; margin: 0; padding: 0; background-color: #ffffff; font-family: Arial, sans-serif;">
-    <!-- Improved accessibility by hiding this content from visual display but still used for screen readers -->
+    <!-- Improved accessibility by hiding this content from visual display with hidden and aria-hidden values -->
     <div style="display: none; max-height: 0; overflow: hidden;" aria-hidden="true">
         Welcome to Lloyds Bank Online for Business - Access your account details inside
     </div>
