--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </tr>
                     <tr>
                         <td style="padding: 0 20px; background-color: #ffffff;">
-                            <!-- Heading tags are also good for document structure and therefore accessibility -->
+                            <!-- Heading tags for document structure / heirarchy and therefore accessibility -->
                             <h2 style="color: #78BE20; margin: 0 0 10px; font-size: 20px; font-weight: normal;">Dear Mr Test,</h2>
                             <h1 style="color: #008753; margin: 0 0 20px; font-size: 24px;">Welcome to Online for Business</h1>
                             <!-- Inline styles for text elements so they display correctly across various email clients -->
