--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Setting the language attribute is useful for screen readers -->
 <html lang="en">
 <head>
     <!-- Specified the character encoding to ensure correct rendering across email clients -->
