--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- Setting the language attribute is useful for screen readers -->
 <html lang="en">
 <head>
-    <!-- Specified the character encoding to ensure correct rendering across email clients -->
+    <!-- Specified the UTF-8 character encoding to ensure email clients interpret the text correctly -->
     <meta charset="UTF-8">
     <!-- Used the meta tag to ensure this design will be viewable on mobile devices - could have gone for more responsive design with Media Queries but I did not want to reduce email client compatability -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
