--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div style="display: none; max-height: 0; overflow: hidden;" aria-hidden="true">
         Welcome to Lloyds Bank Online for Business - Access your account details inside
     </div>
-    <!-- FOr the main table I use role="presentation" so screen readers know this isn't a data table, good for accessibility. I have also used 3 nested tables but no more so not to impact performance -->
+    <!-- FOr the main table I use role="presentation" so screen readers know this table is for layout purposes and not a data table that it needs to describe to users. I have also used 3 nested tables but no more so not to impact performance -->
     <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0" bgcolor="#ffffff">
         <tr>
             <td align="center" style="padding: 20px 0;">
